--- a/EEG/System/model/modelTuning.ipynb
+++ b/EEG/System/model/modelTuning.ipynb
@@ -993,13 +993,7 @@
       "193/193 [==============================] - 2s 13ms/step - loss: 0.1007 - accuracy: 0.9605 - val_loss: 0.2087 - val_accuracy: 0.9418\n",
       "Epoch 56/200\n",
       "193/193 [==============================] - 2s 13ms/step - loss: 0.0967 - accuracy: 0.9622 - val_loss: 0.1464 - val_accuracy: 0.9660\n",
-      "Epoch 57/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 57/200\n",
       "193/193 [==============================] - 2s 13ms/step - loss: 0.0949 - accuracy: 0.9669 - val_loss: 0.1905 - val_accuracy: 0.9584\n",
       "Epoch 58/200\n",
       "193/193 [==============================] - 2s 12ms/step - loss: 0.1056 - accuracy: 0.9593 - val_loss: 0.1864 - val_accuracy: 0.9471\n",
@@ -1162,13 +1156,7 @@
       "193/193 [==============================] - 2s 13ms/step - loss: 0.1253 - accuracy: 0.9535 - val_loss: 0.1944 - val_accuracy: 0.9441\n",
       "Epoch 56/200\n",
       "193/193 [==============================] - 2s 12ms/step - loss: 0.1429 - accuracy: 0.9454 - val_loss: 0.2483 - val_accuracy: 0.9176\n",
-      "Epoch 57/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 57/200\n",
       "193/193 [==============================] - 2s 12ms/step - loss: 0.1292 - accuracy: 0.9506 - val_loss: 0.2797 - val_accuracy: 0.9070\n",
       "Epoch 58/200\n",
       "193/193 [==============================] - 2s 12ms/step - loss: 0.1109 - accuracy: 0.9595 - val_loss: 0.2283 - val_accuracy: 0.9229\n",
@@ -1733,7 +1721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
