--- a/Furniture/APP.ipynb
+++ b/Furniture/APP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "31a6533c",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "4c2d7e0e",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "1473bc1f",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "29d275f1",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "1b1012e5",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "4b10561e",
    "metadata": {},
    "outputs": [],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "7d472b62",
    "metadata": {},
    "outputs": [],
@@ -397,6 +397,9 @@
     "        self.furniture_list = []\n",
     "        self.focus = None\n",
     "        \n",
+    "        Utils.create_label(self.window, x=450, y=100, default_text='Name', font_size=20)\n",
+    "        self.name_textbox = Utils.create_textbox(self.window, width=10, height=1, x=450, y=150, default_text='', font_size=20)\n",
+    "        \n",
     "    def runApp(self):\n",
     "        self.window.mainloop()\n",
     "        \n",
@@ -419,9 +422,15 @@
     "                self.grids[i].append({'value':0, 'type':''})\n",
     "    \n",
     "    def to_json(self):\n",
-    "        json = json.dumps(self.grids)\n",
-    "        with open('data/make.json', 'w') as json_file:\n",
-    "            json.dump(json, json_file)\n",
+    "        self.name = Utils.get_textbox(self.name_textbox)\n",
+    "        self.data = {'name':self.name, 'type':'furniture', 'data':self.grids}\n",
+    "        json_data = json.dumps(self.data)\n",
+    "        \n",
+    "        file_name = 'data/make_' + self.name + '.json'\n",
+    "        with open(file_name, 'w') as json_file:\n",
+    "            json.dump(json_data, json_file)\n",
+    "            \n",
+    "        self.window.destroy()\n",
     "    \n",
     "    def submit(self):\n",
     "        self.create_grid()\n",
@@ -448,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "08e4395f",
    "metadata": {},
    "outputs": [],
@@ -482,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
