--- a/Furniture/APP.ipynb
+++ b/Furniture/APP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "31a6533c",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "4c2d7e0e",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
     "        return canvas\n",
     "    \n",
     "    @staticmethod\n",
-    "    def create_btn(window, width, height, x=0, y=0, bg='default', default_text='', font='Courier', font_size=20, command=None):\n",
+    "    def create_btn(window, width, height, x=0, y=0, bg='default', default_text='', font='Arial', font_size=20, command=None):\n",
     "        if bg=='default':\n",
     "            bg = window.cget('bg')\n",
     "            \n",
@@ -63,7 +63,7 @@
     "        return button\n",
     "    \n",
     "    @staticmethod\n",
-    "    def create_label(window, x=0, y=0, bg='default', default_text='', font='Courier', font_size=14):\n",
+    "    def create_label(window, x=0, y=0, bg='default', default_text='', font='Arial', font_size=14):\n",
     "        if bg=='default':\n",
     "            bg = window.cget('bg')\n",
     "            \n",
@@ -72,7 +72,7 @@
     "        return label\n",
     "    \n",
     "    @staticmethod\n",
-    "    def create_textbox(window, width, height, x=0, y=0, default_text='', font='Courier', font_size=14):\n",
+    "    def create_textbox(window, width, height, x=0, y=0, default_text='', font='Arial', font_size=14):\n",
     "        textbox = Text(window, width=width, height=height, font=(font, font_size))\n",
     "        textbox.place(x=x, y=y)\n",
     "        textbox.insert(1.0, default_text)\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "1473bc1f",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 83,
    "id": "29d275f1",
    "metadata": {},
    "outputs": [],
@@ -159,13 +159,13 @@
     "        self.parent = parent\n",
     "        self.canvas = Utils.create_canvas(window, create_width, create_height, create_x, create_y, bg)\n",
     "        \n",
-    "        Utils.create_label(self.canvas, x=30, y=150, default_text='Size', font_size=20)\n",
-    "        Utils.create_label(self.canvas, x=150, y=150, default_text='X', font_size=20)\n",
+    "        Utils.create_label(self.canvas, x=30, y=80, default_text='Size', font_size=20)\n",
+    "        Utils.create_label(self.canvas, x=150, y=80, default_text='X', font_size=20)\n",
     "        \n",
-    "        self.x_textbox = Utils.create_textbox(self.canvas, width=2, height=1, x=110, y=150, default_text='1', font_size=20)\n",
-    "        self.y_textbox = Utils.create_textbox(self.canvas, width=2, height=1, x=175, y=150, default_text='1', font_size=20)\n",
+    "        self.x_textbox = Utils.create_textbox(self.canvas, width=2, height=1, x=110, y=80, default_text='1', font_size=20)\n",
+    "        self.y_textbox = Utils.create_textbox(self.canvas, width=2, height=1, x=175, y=80, default_text='1', font_size=20)\n",
     "        \n",
-    "        create_btn = Utils.create_btn(self.canvas, width=19, height=1, x=20, y=0, bg='cyan', default_text='Create',\n",
+    "        create_btn = Utils.create_btn(self.canvas, width=12, height=1, x=20, y=0, bg='cyan', default_text='Create',\n",
     "                                     font_size=20, command=self.create_furniture)\n",
     "        \n",
     "    def create_furniture(self):\n",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 84,
    "id": "1b1012e5",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
     "        font_color = self.furniture_list['TextColor'][n]\n",
     "        \n",
     "        btn = Button(canvas, text=text, command=lambda:self.click(btn), width=15, height=4)\n",
-    "        btn.config(font=('Courier', 14), bg=bg, activebackground=active, fg=font_color, activeforeground=font_color)\n",
+    "        btn.config(font=('Arial', 14), bg=bg, activebackground=active, fg=font_color, activeforeground=font_color)\n",
     "        btn.grid(row=row, column=column, sticky='we')\n",
     "        \n",
     "    def click(self, button):\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 85,
    "id": "4b10561e",
    "metadata": {},
    "outputs": [],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 86,
    "id": "7d472b62",
    "metadata": {},
    "outputs": [],
@@ -384,7 +384,7 @@
     "        self.window = Utils.create_window(title, geometry, is_resizable)\n",
     "        \n",
     "        self.grid_module = GridModule(self.window, self, grid_width=600, grid_height=600, grid_x=450, grid_y=200)\n",
-    "        self.create_module = CreateModule(self.window, self, create_width=350, create_height=800, create_x=1100, create_y=80)\n",
+    "        self.create_module = CreateModule(self.window, self, create_width=350, create_height=120, create_x=830, create_y=60, bg='default')\n",
     "        self.list_module = ListModule(self.window, self, list_width=350, list_height=800, list_x=50, list_y=80)\n",
     "        \n",
     "        self.create_title()\n",
@@ -404,7 +404,7 @@
     "        self.window.mainloop()\n",
     "        \n",
     "    def create_title(self):\n",
-    "        Utils.create_label(self.window, default_text='RoomSize', font_size=30, x=650, y=75)\n",
+    "        Utils.create_label(self.window, default_text='RoomSize', font_size=30, x=640, y=75)\n",
     "        Utils.create_label(self.window, default_text='20 X 20', font_size=30, x=660, y=125)\n",
     "        \n",
     "    def clear_object(self):\n",
@@ -457,12 +457,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "08e4395f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "app = Application(window_width=1500, window_height=1000, window_x=200, window_y=200)\n",
+    "app = Application(window_width=1100, window_height=1000, window_x=200, window_y=200)\n",
     "app.runApp()"
    ]
   },
@@ -470,6 +470,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8be03058",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f48957fd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -491,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
