--- a/Furniture/MakeDataset.ipynb
+++ b/Furniture/MakeDataset.ipynb
@@ -2,20 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "31a6533c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "import os\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from tkinter import *"
+    "from tkinter import *\n",
+    "from tkinter import messagebox"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "4c2d7e0e",
    "metadata": {},
    "outputs": [],
@@ -106,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "1473bc1f",
    "metadata": {},
    "outputs": [],
@@ -144,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "29d275f1",
    "metadata": {},
    "outputs": [],
@@ -205,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "1b1012e5",
    "metadata": {},
    "outputs": [],
@@ -219,7 +223,7 @@
     "        self.frame = Frame(window)\n",
     "        self.frame.grid(row=0, column=0, sticky='n')\n",
     "        \n",
-    "        self.furniture_list = pd.read_csv('color.csv')\n",
+    "        self.furniture_list = pd.read_csv('data/color.csv')\n",
     "        \n",
     "        rows=8;columns=2;n=0\n",
     "        for i in range(0, rows):\n",
@@ -257,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "4b10561e",
    "metadata": {},
    "outputs": [],
@@ -367,18 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "3e5cbbfe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tkinter import messagebox\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "id": "7d472b62",
    "metadata": {},
    "outputs": [],
@@ -404,12 +397,18 @@
     "        self.furniture_list = []\n",
     "        self.focus = None\n",
     "        \n",
+    "        Utils.create_label(self.window, x=500, y=100, default_text='Name', font_size=20)\n",
+    "        self.name_textbox = Utils.create_textbox(self.window, width=10, height=1, x=500, y=150, default_text='', font_size=20)\n",
+    "        \n",
+    "        Utils.create_label(self.window, x=850, y=100, default_text='Type', font_size=20)\n",
+    "        self.type_textbox = Utils.create_textbox(self.window, width=10, height=1, x=850, y=150, default_text='', font_size=20)\n",
+    "        \n",
     "    def runApp(self):\n",
     "        self.window.mainloop()\n",
     "        \n",
     "    def create_title(self):\n",
-    "        Utils.create_label(self.window, default_text='RoomSize', font_size=30, x=650, y=75)\n",
-    "        Utils.create_label(self.window, default_text='20 X 20', font_size=30, x=660, y=125)\n",
+    "        Utils.create_label(self.window, default_text='RoomSize', font_size=30, x=650, y=25)\n",
+    "        Utils.create_label(self.window, default_text='20 X 20', font_size=30, x=660, y=75)\n",
     "        \n",
     "    def clear_object(self):\n",
     "        for furniture in self.furniture_list:\n",
@@ -426,9 +425,17 @@
     "                self.grids[i].append({'value':0, 'type':''})\n",
     "    \n",
     "    def to_json(self):\n",
-    "        json = json.dumps(self.grids)\n",
-    "        with open('data/make.json', 'w') as json_file:\n",
-    "            json.dump(json, json_file)\n",
+    "        self.name = Utils.get_textbox(self.name_textbox)\n",
+    "        self.room_type = Utils.get_textbox(self.type_textbox)\n",
+    "        \n",
+    "        self.data = {'name':self.name, 'type':self.room_type, 'data':self.grids}\n",
+    "        json_data = json.dumps(self.data)\n",
+    "        \n",
+    "        file_name = 'data/ikea_' + self.data['name'] + '.json'\n",
+    "        with open(file_name, 'w') as json_file:\n",
+    "            json.dump(json_data, json_file)\n",
+    "            \n",
+    "        self.window.destroy()\n",
     "    \n",
     "    def submit(self):\n",
     "        self.create_grid()\n",
@@ -449,25 +456,16 @@
     "                for j in range(x, x+w):\n",
     "                    self.grids[i][j]['value'] = 1\n",
     "                    self.grids[i][j]['type'] = furniture_data['type']\n",
-    "                    \n",
-    "        self.to_array()\n",
+    "\n",
     "        self.to_json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "id": "08e4395f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 1, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}], [{\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}, {\"value\": 0, \"type\": \"\"}]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "app = Application(window_width=1500, window_height=1000, window_x=200, window_y=200)\n",
     "app.runApp()"
@@ -475,52 +473,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
-   "id": "198159d1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = []\n",
-    "for i in range(20):\n",
-    "    x.append([])\n",
-    "    for j in range(20):\n",
-    "        x[i].append(0)\n",
-    "        \n",
-    "for i in range(20):\n",
-    "    print(x[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "8be03058",
+   "id": "5057ed0e",
    "metadata": {},
    "outputs": [],
    "source": []
