--- a/Furniture/v2/RL.ipynb
+++ b/Furniture/v2/RL.ipynb
@@ -39,10 +39,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "333f849b",
+   "id": "47d255c5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from collections import deque\n",
+    "memory = deque(maxlen=1000)\n",
+    "\n",
+    "def append_sample(state, mask, target, reward):\n",
+    "    memory.append((state, mask, target, reward))"
+   ]
   }
  ],
  "metadata": {
