--- a/Furniture/v2/RL.ipynb
+++ b/Furniture/v2/RL.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47d255c5",
+   "id": "9ecd4f0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +48,38 @@
     "\n",
     "def append_sample(state, mask, target, reward):\n",
     "    memory.append((state, mask, target, reward))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "958f9dcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_furniture_list(data):\n",
+    "    furnitures = {}\n",
+    "    for i in range(1, 17):\n",
+    "        furnitures[i] = [[]]\n",
+    "        for j in range(20):\n",
+    "            for k in range(20):\n",
+    "                if data[j][k] == i:\n",
+    "                    furnitures[i][j].append(data[j][k])\n",
+    "            furnitures[i].append([])\n",
+    "\n",
+    "    for i in range(1, 17):\n",
+    "        for j in range(20, -1, -1):\n",
+    "            if len(furnitures[i][j]) == 0:\n",
+    "                del(furnitures[i][j])\n",
+    "            \n",
+    "    for i in range(16, 0, -1):\n",
+    "        if len(furnitures[i]) == 0:\n",
+    "            del(furnitures[i])\n",
+    "    \n",
+    "    for key in furnitures.keys():\n",
+    "        furnitures[key] = np.array(furnitures[key])\n",
+    "    \n",
+    "    return furnitures"
    ]
   }
  ],
