--- a/Furniture/v2/RL.ipynb
+++ b/Furniture/v2/RL.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ecd4f0f",
+   "id": "0d8b3197",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "958f9dcf",
+   "id": "f4cc4204",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +80,50 @@
     "        furnitures[key] = np.array(furnitures[key])\n",
     "    \n",
     "    return furnitures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6fcf7e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_mask(state, f):\n",
+    "    mask = np.ones((20,20))\n",
+    "    shape = f.shape\n",
+    "    \n",
+    "    zero_list = []\n",
+    "    for i in range(20):\n",
+    "        for j in range(20):\n",
+    "            if state[i][j] != 0:\n",
+    "                mask[i][j] = 0\n",
+    "            else:\n",
+    "                zero_list.append((i,j))\n",
+    "    \n",
+    "    temp_zero_list = copy.deepcopy(zero_list)\n",
+    "    for zero in zero_list:\n",
+    "        z_y, z_x = zero\n",
+    "        if z_y + shape[0] > 20 or z_x + shape[1] > 20:\n",
+    "            mask[z_y][z_x] = 0\n",
+    "            temp_zero_list.remove(zero)\n",
+    "            \n",
+    "    zero_list = copy.deepcopy(temp_zero_list)\n",
+    "    \n",
+    "    for zero in zero_list:\n",
+    "        z_y, z_x = zero\n",
+    "        \n",
+    "        for i in range(z_y, z_y + shape[0]):\n",
+    "            flag = False\n",
+    "            for j in range(z_x, z_x + shape[1]):\n",
+    "                if state[i][j] != 0:\n",
+    "                    mask[z_y][z_x] = 0\n",
+    "                    flag = True\n",
+    "                    break              \n",
+    "            if flag:\n",
+    "                break\n",
+    "            \n",
+    "    return mask"
    ]
   }
  ],
