--- a/Furniture/v2/RL.ipynb
+++ b/Furniture/v2/RL.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d8b3197",
+   "id": "aaf9b81e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4cc4204",
+   "id": "b38e17d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6fcf7e3",
+   "id": "1fe23bc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,6 +124,23 @@
     "                break\n",
     "            \n",
     "    return mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d582790c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_action_space(mask):\n",
+    "    action_space = []\n",
+    "    for i in range(20):\n",
+    "        for j in range(20):\n",
+    "            if mask[i][j] == 1:\n",
+    "                action_space.append((i,j))\n",
+    "                \n",
+    "    return action_space"
    ]
   }
  ],
